1. Added TemplateList View. 2. Added Widgets. 3. Added Serilog Logger. 4. Added EF Core and Sql Server Support.

--- a/DynamicDashboardDemo/appsettings.json
+++ b/DynamicDashboardDemo/appsettings.json
@@ -1,10 +1,81 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+  "AllowedHosts": "*",
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Logger",
+        "Args": {
+          "configureLogger": {
+            "Filter": [
+              {
+                "Name": "ByIncludingOnly",
+                "Args": {
+                  "expression": "(@Level = 'Error' or @Level = 'Fatal' or @Level = 'Warning')"
+                }
+              }
+            ],
+            "WriteTo": [
+              {
+                "Name": "File",
+                "Args": {
+                  "path": "Logs/ErrorLog_.log",
+                  "outputTemplate": "{Timestamp:o} [{Level:u3}] ({SourceContext}) {Message}{NewLine}{Exception}",
+                  "rollingInterval": "Day",
+                  "retainedFileCountLimit": 7
+                }
+              }
+            ]
+          }
+        }
+      },
+      {
+        "Name": "Logger",
+        "Args": {
+          "configureLogger": {
+            "Filter": [
+              {
+                "Name": "ByIncludingOnly",
+                "Args": {
+                  "expression": "(@Level = 'Information' or @Level = 'Debug')"
+                }
+              }
+            ],
+            "WriteTo": [
+              {
+                "Name": "File",
+                "Args": {
+                  "path": "Logs/InfoLog_.log",
+                  "outputTemplate": "{Timestamp:o} [{Level:u3}] ({SourceContext}) {Message}{NewLine}{Exception}",
+                  "rollingInterval": "Day",
+                  "retainedFileCountLimit": 7
+                }
+              }
+            ]
+          }
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName"
+    ],
+    "Properties": {
+      "Application": "MultipleLogFilesSample"
     }
   },
-  "AllowedHosts": "*"
+  "DatabaseInfo": {
+    "SqlConnectionString": "Server=AMIT-DEV4\\MSSQL2017DEV4;Database=DynamicDashboardDemo;User=sa;password=pctadmin$123;",
+    "MongoConnectionString": "mongodb://172.36.0.107:27017",
+    "MongoDatabaseName": "AGI",
+    "MongoProcessParamCollectionName": "PPT_AMGIOT_ColumnData_Test",
+    "MongoAGIProcessParamCollectionName": "ProcessParameter_Transaction_AGI"
+  }
 }
